# Donald-RTX

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2023-11-26_23-02-26/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Code/: BHVNode.h  BinaryRender.h  BlinnPhong.cpp  BlinnPhong.h  BoundingBox.h  Camera.cpp  Camera.h  Colour.h  Cylinder.h  GeoVec.cpp  GeoVec.h  HitRecord.h  Hittable.h  Interval.h  Light.h  Makefile  Material.cpp  Material.h  PPMWriter.cpp  PPMWriter.h  Pathtrace.h  Plane.h  PointLight.h  Ray.cpp  Ray.h  RenderMode.h  SceneParser.cpp  SceneParser.h  Sphere.h  Texture.h  TexturedBlinnPhong.h  Triangle.h  World.h  raytracer  raytracer.cpp  render-bin.ppmcle  render.ppm  render.ppmmake  render_test.ppm  utils.cpp  (+1 more)
LLM-Responses/: Copilot.txt  LLM-Responses.json  Pathtracing.txt
Scenes/: mirror_image.json  pathtrace_scene.json  pathtraced.json  reflections.json  refractive.json  scene.json  simple_phong.json  texture_scene.json  video_test.json
Scripts/: generate_scene.py  python.json  scene.json  video_test.json
Textures/: informatics.ppm  red_marble.ppm
source/: BHVNode.h  BinaryRender.h  BlinnPhong.h  Camera.cpp  Camera.h  Cylinder.h  GeoVec.h  HitRecord.h  Hittable.h  Interval.h  Makefile  PPMWriter.cpp  PPMWriter.h  Ray.cpp  RenderMode.h  Sphere.h  Triangle.h  World.h  raytracer.cpp
src/: main.cpp
src/Header Files/: Camera.h  PPMWriter.h  Ray.h
src/Source Files/: Camera.cpp  GeoVec.cpp  PPMWriter.cpp  Ray.cpp
